--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -911,6 +911,11 @@ body {
   letter-spacing: 0.2px;
 }
 
+.loading {
+  text-align: center;
+  border: 0.7px solid rgba(148, 166, 190, 0.4);
+}
+
 @media screen and (max-width: 1200px) {
   .main__block {
     width: 100%;
